Fix color contrast

--- a/src/styles/onboard.css
+++ b/src/styles/onboard.css
@@ -54,7 +54,7 @@
   --onboard-wallet-button-background-hover: var(--color-background-light);
   --onboard-wallet-button-background-active: var(--color-background-light);
   /* Needs to be brighter than var(--color-primary-main) to compensate for shadow blur */
-  --onboard-wallet-button-box-shadow-hover: 0 0 2px #00FD00;
+  --onboard-wallet-button-box-shadow-hover: 0 0 2px #00fd00;
 
   /* Fonts */
   --onboard-font-family-normal: DM Sans, sans-serif;
